Refactor Category entity and related components to use Long as the identifier type instead of Integer. This change includes updates to the Category class, CategoryController, CategoryService, and associated tests to ensure consistency across the codebase. Additionally, enhance validation constraints for category name and description fields.